@@ -1,3 +1,8 @@
+2008-04-26  Frank Ch. Eigler  <fche@elastic.org>
+
+	* tapsets.cxx (common_probe_entryfn_prologue): Undo
+	clear of overload-related context vars; add explanation why.
+
 2008-04-25  Frank Ch. Eigler  <fche@elastic.org>
 
 	* systemtap.spec.in: Simplify configuration defaults.
